--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href='https://unpkg.com/fundamental-styles@latest/dist/fundamental-styles.css' rel='stylesheet'>
-  <link rel="stylesheet" href="https://unpkg.com/primeflex@latest/primeflex.css">                                         
+  <link rel="stylesheet" href="https://unpkg.com/primeflex@latest/primeflex.css"> 
+  <link id="app-theme" rel="stylesheet" type="text/css" href="">                                        
 
 </head>
 <body>
